[project]
name = "rugged"
description = "ASGI middleware to unflatten JSON request bodies"
dependencies = [
    "starlette<=1",
]
requires-python = ">= 3.10"
readme = "README.md"
authors = [{ name = "Ross Masters", email = "ross@rossmasters.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
[project.urls]
Homepage = "https://github.com/rmasters/rugged"
Issues = "https://github.com/rmasters/rugged/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "pytest>=8.0.2",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "rugged/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["rugged"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
